--- a/index.html
+++ b/index.html
@@ -7,5 +7,33 @@
 </head>
 <body>
   <h1>Internet Technologies and Web Design</h1>
+
+  <h2>Course Information</h2>
+  <p><strong>Course:</strong> ITMD-361 Internet Technologies and Web Design</p>
+  <p><strong>Semester/Year:</strong> [Insert Semester and Year]</p>
+  <p><strong>Student Name & Email:</strong> [Insert Your Name and Email]</p>
+  <p><strong>Professor:</strong> Anita Debarlaben</p>
+  <p><strong>Lecture Days, Time and Place:</strong> Day? 1:50-3:05 pm, In Person and on Canvas</p>
+
+  <h2>Course Catalog Description</h2>
+  <p>This course will cover the creation of Web pages and sites using HTML, CSS, JavaScript, and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages and cross-linked structures. Prerequisites: [none] Credit: 2-2-3 Semester Hours</p>
+
+  <h2>Course Outcomes</h2>
+  <p>Students completing this course will be able to:</p>
+  <ul>
+    <li>Recognize HTML, CSS, and JavaScript markup and code.</li>
+    <li>Select the proper mark-up tags or code to achieve a particular result.</li>
+    <li>Identify improperly used markup and code.</li>
+    <li>Produce modern standards compliant web pages.</li>
+    <li>Deploy web pages to a GitHub server.</li>
+  </ul>
+
+  <h2>Course Objectives</h2>
+  <p>At the conclusion of this course, each successful student will be able to:</p>
+  <ul>
+    <li>Explain the client and server architecture of both the internet and related web technologies.</li>
+    <li>Use a basic text editor and other software tools to create web pages written in HTML, CSS, JavaScript, and jQuery.</li>
+    <li>Deploy web pages to GitHub using version control and GitHub Desktop.</li>
+  </ul>
 </body>
 </html>
