Added full content with headings, paragraphs, and lists

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <h2>Course Information</h2>
   <p><strong>Course:</strong> ITMD-361 Internet Technologies and Web Design</p>
-  <p><strong>Semester/Year:</strong> [Insert Semester and Year]</p>
-  <p><strong>Student Name & Email:</strong> [Insert Your Name and Email]</p>
+  <p><strong>Semester/Year:</strong> [1st semester/2025]</p>
+  <p><strong>Student Name & Email:</strong> [Archit Sunil Singh/ asingh195@hawk.illinoistech.edu]</p>
   <p><strong>Professor:</strong> Anita Debarlaben</p>
-  <p><strong>Lecture Days, Time and Place:</strong> Day? 1:50-3:05 pm, In Person and on Canvas</p>
+  <p><strong>Lecture Days, Time and Place:</strong> 10th September,2025 1:50-3:05 pm, In Person and on Canvas</p>
 
   <h2>Course Catalog Description</h2>
   <p>This course will cover the creation of Web pages and sites using HTML, CSS, JavaScript, and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages and cross-linked structures. Prerequisites: [none] Credit: 2-2-3 Semester Hours</p>
