--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>Course Information</h2>
   <p><strong>Course:</strong> ITMD-361 Internet Technologies and Web Design</p>
   <p><strong>Semester/Year:</strong> [1st semester/2025]</p>
-  <p><strong>Student Name & Email:</strong> [Archit Sunil Singh/ asingh195@hawk.illinoistech.edu]</p>
+  <p><strong>Student Name & Email:</strong> Archit Sunil Singh/ asingh195@hawk.illinoistech.edu</p>
   <p><strong>Professor:</strong> Anita Debarlaben</p>
   <p><strong>Lecture Days, Time and Place:</strong> 10th September,2025 1:50-3:05 pm, In Person and on Canvas</p>
 
