--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-  <h1>1st Semester, 2025</h1><p>Archit Sunil Singh/ asingh195@hawk.illinoistech.edu</p>
+  <h>1st Semester, 2025</h2><p>Archit Sunil Singh/ asingh195@hawk.illinoistech.edu</p>
 
   <h2><strong>Professor:</strong></h2>
   <p>Anita Debarlaben</p>
