--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   
-  <h>1st Semester, 2025</h2><p>Archit Sunil Singh/ asingh195@hawk.illinoistech.edu</p>
+  <h2>1st Semester, 2025</h2><p>Archit Sunil Singh/ asingh195@hawk.illinoistech.edu</p>
 
   <h2><strong>Professor:</strong></h2>
   <p>Anita Debarlaben</p>
 
   <h2><strong>Lecture Days, Time and Place:</strong></h2>
-  <p>10th September,2025 1:50-3:05 pm, In Person and on Canvas</p>
+  <p>10th September, 2025 1:50-3:05 pm, In Person and on Canvas</p>
 
   <h2>Course Catalog Description</h2>
   <p>This course will cover the creation of Web pages and sites using HTML, CSS, JavaScript, and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages and cross-linked structures.<strong>Prerequisites:</strong>[none]<strong>Credit:</strong> 2-2-3 Semester Hours</p>
