--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet Technologies and Web Design</title>
+  <title> ITMD-361 Internet Technologies and Web Design</title>
 </head>
 
 <body>
-  
+  <h1><strong>ITMD-361 Internet Technologies and Web Design</strong></h1>
   <h2>1st Semester, 2025</h2><p>Archit Sunil Singh/ asingh195@hawk.illinoistech.edu</p>
 
   <h2><strong>Professor:</strong></h2>
